--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -35,5 +35,6 @@
 		<P>html标签对于大小写不敏感，但推荐小写</P>
 		<a href="https://www.runoob.com/tags/ref-standardattributes.html", target="_blank">HTML属性列表</a>
 		<a href="https://www.runoob.com/html/html-formatting.html", target="_blank">HTML文本格式化</a>
+		<a href="https://www.runoob.com/html/html-quicklist.html", target="_blank">HTML速查手册</a>
 	</body>
 </html>
