--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -8,7 +8,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<!-- 内部样式表 -->
 		<style type="text/css">
-		p {
+		h1 {
 			color:blue
 		}
 		</style>
@@ -45,7 +45,7 @@
 
 		<hr>
 
-		<p class="box_model">content</p>
-		<p class="box_model">content</p>
+		<p class="box_model"><span style="border:solid">content</span></p>
+		<p class="box_model"><span style="border:solid">content</span></p>
 	</body>
 </html>
