--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -45,7 +45,7 @@
 
 		<hr>
 
-		<p class="box_model"><span style="border:solid">content</span></p>
-		<p class="box_model"><span style="border:solid">content</span></p>
+		<p class="box_model"><span>content</span></p>
+		<p class="box_model"><span>content</span></p>
 	</body>
 </html>
