--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -48,7 +48,7 @@
 		<p class="box_model"><span>content</span></p>
 		<p class="box_model"><span>content</span></p>
 
-		<div style="border:solid; height: 1000px">
+		<div style="border:solid; position: relative; height: 1000px">
 			<div style="border:solid; position: static">static</div>	<!-- 正常位置（默认值） -->
 			<div style="border:solid; position: fixed; top: 100px; left: 100px">fixed</div>	<!-- 相对浏览器的位置的定位 -->
 			<div style="border:solid; position: relative; top: 100px; left: 100px">relative</div>	<!-- 相对static位置的定位 -->
