--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -48,6 +48,16 @@
 		<p class="box_model"><span>content</span></p>
 		<p class="box_model"><span>content</span></p>
 
+		<div style="border:solid; overflow: auto; height: 90px">
+			<span style="position: relative; top: 0px">content</span>
+			<span style="position: relative; top: 20px">content</span>
+			<span style="position: relative; top: 40px">content</span>
+			<span style="position: relative; top: 60px">content</span>
+			<span style="position: relative; top: 80px">content</span>
+			<span style="position: relative; top: 100px">content</span>
+			<span style="position: relative; top: 120px">content</span>
+		</div>
+
 		<div style="border:solid; position: relative; height: 1000px">
 			<div style="border:solid; position: static">static</div>	<!-- 正常位置（默认值） -->
 			<div style="border:solid; position: fixed; top: 100px; left: 100px">fixed</div>	<!-- 相对浏览器的位置的定位 -->
