--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -48,7 +48,8 @@
 		<p class="box_model"><span>content</span></p>
 		<p class="box_model"><span>content</span></p>
 
-		<div style="border:solid; overflow: auto; height: 90px">
+		<div style="border:solid; margin:10px; overflow: auto; height: 90px">
+			<p>overflow</p>
 			<span style="position: relative; top: 0px">content</span>
 			<span style="position: relative; top: 20px">content</span>
 			<span style="position: relative; top: 40px">content</span>
@@ -58,7 +59,14 @@
 			<span style="position: relative; top: 120px">content</span>
 		</div>
 
-		<div style="border:solid; position: relative; height: 800px">
+		<div style="border:solid; margin:10px">
+			<p>float</p>
+			<div style="border:solid; float:left">content</div>
+			<div style="border:solid; float:left">content</div>
+			<div style="border:solid; float:left">content</div>
+		</div>
+
+		<div style="border:solid; margin:10px; position: relative; height: 800px">
 			<div style="border:solid; position: static">static</div>	<!-- 正常位置（默认值） -->
 			<div style="border:solid; position: fixed; top: 100px; left: 100px">fixed</div>	<!-- 相对浏览器的位置的定位 -->
 			<div style="border:solid; position: relative; top: 100px; left: 100px">relative</div>	<!-- 相对static位置的定位 -->
