--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -22,6 +22,7 @@
 	</head>
 	<!-- body部分 -->
 	<body>
+		<!-- HTML基本标签 -->
 		<h1>标题：h1</h1>
 		<h2>标题：h2</h2>
 		<h3>标题：h3</h3>
@@ -45,9 +46,11 @@
 
 		<hr>
 
+		<!-- 盒子模型 -->
 		<p class="box_model"><span>content</span></p>
 		<p class="box_model"><span>content</span></p>
 
+		<!-- 滚动 -->
 		<div style="border:solid; margin:10px; overflow: auto; height: 90px">
 			<p>overflow</p>
 			<span style="position: relative; top: 0px">content</span>
@@ -59,6 +62,7 @@
 			<span style="position: relative; top: 120px">content</span>
 		</div>
 
+		<!-- 浮动 -->
 		<div style="border:solid; margin:10px">
 			<p>float</p>
 			<div style="border:solid; float:left">content</div>
@@ -66,6 +70,7 @@
 			<div style="border:solid; float:left">content</div>
 		</div>
 
+		<!-- 定位 -->
 		<div style="border:solid; margin:10px; position: relative; height: 800px">
 			<div style="border:solid; position: static">static</div>	<!-- 正常位置（默认值） -->
 			<div style="border:solid; position: fixed; top: 100px; left: 100px">fixed</div>	<!-- 相对浏览器的位置的定位 -->
