--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -68,6 +68,7 @@
 			<div style="border:solid; float:left">content</div>
 			<div style="border:solid; float:left">content</div>
 			<div style="border:solid; float:left">content</div>
+			<p style="clear:both">clear float</p>	<!-- 清除浮动，确保当前标签不与float标签在同一行 -->
 		</div>
 
 		<!-- 定位 -->
