--- a/fe/basic/index.html
+++ b/fe/basic/index.html
@@ -52,7 +52,7 @@
 
 		<!-- 滚动 -->
 		<div style="border:solid; margin:10px; overflow: auto; height: 90px">
-			<p>overflow</p>
+			<p style="border:solid">overflow</p>
 			<span style="position: relative; top: 0px">content</span>
 			<span style="position: relative; top: 20px">content</span>
 			<span style="position: relative; top: 40px">content</span>
@@ -64,7 +64,7 @@
 
 		<!-- 浮动 -->
 		<div style="border:solid; margin:10px">
-			<p>float</p>
+			<p style="border:solid">float</p>
 			<div style="border:solid; float:left">content</div>
 			<div style="border:solid; float:left">content</div>
 			<div style="border:solid; float:left">content</div>
@@ -73,6 +73,7 @@
 
 		<!-- 定位 -->
 		<div style="border:solid; margin:10px; position: relative; height: 800px">
+			<p style="border:solid">position</p>
 			<div style="border:solid; position: static">static</div>	<!-- 正常位置（默认值） -->
 			<div style="border:solid; position: fixed; top: 100px; left: 100px">fixed</div>	<!-- 相对浏览器的位置的定位 -->
 			<div style="border:solid; position: relative; top: 100px; left: 100px">relative</div>	<!-- 相对static位置的定位 -->
