--- a/fe/homepage/index.html
+++ b/fe/homepage/index.html
@@ -9,35 +9,32 @@
 	<!-- body部分 -->
 	<body>
 		<!-- 头部 -->
-		<div class="header">
+		<header>
 			<h1>标题/Logo</h1>
-		</div>
+		</header>
 
-		<!-- 顶部导航 -->
-		<div class="navigation">
+		<!-- 导航 -->
+		<nav>
 			<a href="#">链接</a>
 			<a href="#">链接</a>
 			<a href="#">链接</a>
-		</div>
+		</nav>
 
 		<!-- 内容 -->
-		<div class="content">
-			<div class="column left">
-				<h2>左侧栏</h2>
-			</div>
-			<div class="column center">
-				<h2>核心内容</h2>
-				<p>xxxxxxxx</p>
-			</div>
-			<div class="column right">
-				<h2>右侧栏</h2>
-			</div>
+		<div id="content">
+			<aside>
+				<h2>侧边栏</h2>
+			</aside>
+			<article>
+				<h2>主要内容</h2>
+				<p>xxxx</p>
+			</article>
 		</div>
 
-		<!-- 页脚 -->
-		<div class="footer">
+		<!-- 脚注 -->
+		<footer>
 			<h3>页脚</h3>
-		</div>
+		</footer>
 
 	</body>
 </html>
