--- a/fe/case/常见样式.html
+++ b/fe/case/常见样式.html
@@ -21,8 +21,13 @@
     <p style="font-size: 10px;">以像素为单位</p>
     <p style="font-size: 0.5em;">相对父元素缩放，父元素没有则继续向上寻找</p>
 
-    <h3>高度与行高</h3>
+    <h3>文字垂直居中</h3>
     <p style="height: 50px; line-height: 50px; border: solid;">当行高等于元素高度时，单行文本垂直居中</p>
+
+    <h3>单行溢出省略号</h3>
+    <ul style="width: 100px;list-style-position: inside">
+        <li style="overflow: hidden;white-space: nowrap;text-overflow: ellipsis;">xxxxxxxxxxxxxxxx</li>
+    </ul>
 </body>
 
 </html>
